Fix #3 through Frege/frege-scripting@3b6cd90db6af14a8b49b7232bfc52f9aae214b13, Fix UI not to overflow

--- a/try-frege-web/src/main/webapp/css/repl.css
+++ b/try-frege-web/src/main/webapp/css/repl.css
@@ -48,19 +48,6 @@ div.console span.jquery-console-prompt-label {
     font-weight: bold
 }
 
-.footer {
-    font-weight: italic;
-    text-align: right;
-    font-size: 10px;
-    color: #444;
-    font-family: Terminus, Consolas, Profont, "Andale Mono", Monaco,
-    Inconsolata, Inconsolata-g, Unifont, Lime, "ClearlyU PUA", Clean,
-    "DejaVu Sans Mono", "Lucida Console", "Bitstream Vera Sans Mono",
-    Freemono, "Liberation Mono", Dina, Anka, Droid Sans Mono,
-    Anonymous Pro, Proggy fonts, Envy Code R, Gamow, Courier,
-    "Courier New", Terminal, monospace;
-}
-​
 div.morefrege {
     font-size: 14px;
     font-family: Consolas, Inconsolata, Profont, Terminus, "DejaVu Sans Mono","Andale Mono", Monaco,
@@ -86,9 +73,9 @@ div.morefrege {
 }
 
 ul.repolinks li:hover{background: #F39814; color: white;}
-ul.repolinks { list-style-type: none; margin: 0; padding: 0; width: 680px; }
-ul.repolinks li { margin: 3px 3px 3px 0; padding: 1px; float: left; width: 300px; height: 90px; font-size: 24px; text-align: center; }
+ul.repolinks { list-style-type: none; margin: 0; padding: 0;  }
+ul.repolinks li { margin: 3px 3px 3px 0; padding: 6px; float: left; width: 80%; font-size: 16px; text-align: center; }
 ul.repolinks li a { margin: 0px; display: block; width: 100%; height: 100%; }
 
 ul.features { }
-ul.features li {margin: 3px 3px 3px 0; padding: 4px; font-size:20px;}
+ul.features li {padding:2px; font-size:14px;}
